# avatar

./: .gitignore  CLAUDE.md  README.md  demo.html  generator.py  morph_demo.html  pyproject.toml  requirements-landmarks.txt  requirements-scripts.txt
avatar_demo/: README.md  pubspec.yaml
avatar_demo/lib/: main.dart
avatar_demo/test/: widget_test.dart
docs/: cli_usage.md  experiments.md  flutter_integration.md  spike-starvector-im2svg.md  talking-head-options.md
mesh_avatar/: debug_render.py  mesh_data.json  mesh_demo.html  render_anim.py
outputs/: viseme_demo.html
outputs/flashimage/: geometry.json  manifest.json
outputs/lipsync/: lipsync_data.js
outputs/starvector/: gallery.html
outputs/svg_claude/: gallery.html
outputs/svg_visemes/: contact_sheet.html  mouth_paths.json
outputs/viseme_cache/: s0_the_quick_brown_fox_jumps_over_timeline.json  s1_watch_carefully_as_the_mouth_m_timeline.json
outputs/visemes/: metadata.json
runpod/: README.md  download_starvector_outputs.py  generate_fantasy_talking.py  generate_sample.py  generate_starvector.py  generate_starvector_from_images.py  generate_starvector_jupyter.py  generate_viseme.py  generate_viseme_i2v.py  pod.py
runpod/core/: comfyui_client.py  wan_workflow.py
runpod/docs/: runpod-audio.md  runpod-video.md
scripts/: extract_landmarks.py  flashimage_generate.py  generate_head.py  generate_svgs_claude.py  lipsync_pipeline.py  publish-avatars.sh  viseme_demo.py
tests/: conftest.py
voxhelm/: __init__.py  __main__.py
voxhelm_avatar/: README.md  pubspec.yaml
webapp/: index.html
(+46 files in other folders)
