[project]
name = "voxhelm"
version = "0.1.0"
description = "SVG avatar generation and audio-driven lip-sync toolkit"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40",
    "typer>=0.15",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
]

[project.optional-dependencies]
bedrock = ["boto3"]
openrouter = ["openai"]
all = ["boto3", "openai"]

[project.scripts]
voxhelm = "voxhelm.cli.main:app"

[tool.setuptools.packages.find]
include = ["voxhelm*"]

[tool.setuptools.package-data]
"voxhelm.viewer" = ["*.html"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
