[project]
name = "voxhelm"
version = "0.2.0"
description = "Avatar generation and audio-driven lip-sync toolkit — SVG cartoon and photorealistic modes"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.15",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
]

[project.optional-dependencies]
svg = ["anthropic>=0.40"]
photo = []  # uses urllib only — no extra deps beyond OpenRouter API key
bedrock = ["boto3"]
openrouter = ["openai"]
all = ["anthropic>=0.40", "boto3", "openai"]
dev = ["pytest>=8.0", "httpx>=0.27", "pytest-asyncio>=0.24"]

[project.scripts]
voxhelm = "voxhelm.cli.main:app"

[tool.setuptools.packages.find]
include = ["voxhelm*"]

[tool.setuptools.package-data]
"voxhelm.viewer" = ["*.html"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
